añadido de clases a los botones comportamiento responsivo distinto

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
               <div class="sector_medio_button">
                       
-                                    <button onclick="verificar_tarea('Encriptar')" >Encriptar</button>
-                                    <button onclick="verificar_tarea('Desencriptar')">Desencriptar</button>
+                                    <button class="medio" onclick="verificar_tarea('Encriptar')" >Encriptar</button>
+                                    <button class="medio" onclick="verificar_tarea('Desencriptar')">Desencriptar</button>
                                                                 </div> 
                              
           </div>
@@ -49,7 +49,7 @@
                 </div> 
             <div class="cifrado">
                     <h4 id="mensaje"></h4>
-                    <div class="sector_medio_button">
+                    <div class="rectangle_button">
                     <button class="copiado" onclick="volver()"><img src="./multimedias/flecha-izquierda.png" alt="flecha atras"></button>
                     <button class="copiado" onclick="copiar_texto()">copiar</button>
                            </div>
