--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                  <div id="cuadro_de_texto">
                   <h1>Encriptador_V1</h1>
                     <textarea placeholder="ingrese el mensaje a encriptar " id="var_texto" required></textarea>
+                    <div id="mensaje_vacio">El recuadro se encuentra vacio</div>
                     <h6 id="sintaxis">
                 <img  src="./multimedias/signo-de-exclamacion-en-un-circulo.png" alt="pequeño signo de exclamacion">
                 Solo minusculas y sin acentos</h6>
@@ -49,6 +50,7 @@
                 </div> 
             <div class="cifrado">
                     <h4 id="mensaje"></h4>
+                    <div id="mensajeFlotante">Texto copiado al portapapeles</div>
                     <div class="rectangle_button">
                     <button class="copiado" onclick="volver()"><img src="./multimedias/flecha-izquierda.png" alt="flecha atras"></button>
                     <button class="copiado" onclick="copiar_texto()">copiar</button>
@@ -57,14 +59,14 @@
           </div> 
     </div>
   
-   <div>
-    <div id="mensajeFlotante">Texto copiado al portapapeles</div>
-    <div id="mensaje_vacio">El recuadro se encuentra vacio</div>
+
+  
+    
   </div>
   
   <footer class="encabezado_y_pie" >
       Informacion de contacto
-        <a href="http://"><img src="./multimedias/linkedin.png" alt="icono de linkedin"></a>
+        <a href="https://www.linkedin.com/in/agustin-b-4a46b9140/"><img src="./multimedias/linkedin.png" alt="icono de linkedin"></a>
         <a href="mailto:aguscabj10.ab@gmail.com"><img src="./multimedias/gmail.png" alt="icono de correo electronico"></a>
       </footer>
   
